correct spacing calculation

--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -62,7 +62,7 @@ $xlarge: 1400px;
 }
 
 @function calc-width($padding, $numCols) {
-  @return 100/$numCols - $padding * $numCols * 1%
+  @return 100/$numCols - $padding * $numCols / ($numCols / 2) * 1%
 };
 
 .App {
@@ -149,10 +149,10 @@ $card-padding: 1.5;
   box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25)!important;
   border-radius: 1px!important;
   &__member {
-    border-bottom: 10px solid #03A095;
+    border-bottom: 10px solid #805298;
   }
   &__contributor {
-    border-bottom: 10px solid #805298;
+    border-bottom: 10px solid #03A095;
   }
 }
 
